tests/ui/impl-trait/auto-trait-leak.stderr
error[E0391]: cycle detected when computing type of opaque `cycle1::{opaque#0}`
  --> $DIR/auto-trait-leak.rs:11:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
   |
note: ...which requires type-checking `cycle1`...
  --> $DIR/auto-trait-leak.rs:14:5
   |
LL |     send(cycle2().clone());
   |     ^^^^
   = note: ...which requires evaluating trait selection obligation `cycle2::{opaque#0}: core::marker::Send`...
note: ...which requires computing type of opaque `cycle2::{opaque#0}`...
  --> $DIR/auto-trait-leak.rs:19:16
   |
LL | fn cycle2() -> impl Clone {
   |                ^^^^^^^^^^
note: ...which requires type-checking `cycle2`...
  --> $DIR/auto-trait-leak.rs:20:5
   |
LL |     send(cycle1().clone());
   |     ^^^^
   = note: ...which requires evaluating trait selection obligation `cycle1::{opaque#0}: core::marker::Send`...
   = note: ...which again requires computing type of opaque `cycle1::{opaque#0}`, completing the cycle
note: cycle used when computing type of `cycle1::{opaque#0}`
  --> $DIR/auto-trait-leak.rs:11:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of opaque `cycle1::{opaque#0}`
  --> $DIR/auto-trait-leak.rs:11:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
   |
note: ...which requires type-checking `cycle1`...
  --> $DIR/auto-trait-leak.rs:14:5
   |
LL |     send(cycle2().clone());
   |     ^^^^
   = note: ...which requires evaluating trait selection obligation `cycle2::{opaque#0}: core::marker::Send`...
note: ...which requires computing type of opaque `cycle2::{opaque#0}`...
  --> $DIR/auto-trait-leak.rs:19:16
   |
LL | fn cycle2() -> impl Clone {
   |                ^^^^^^^^^^
note: ...which requires type-checking `cycle2`...
  --> $DIR/auto-trait-leak.rs:19:1
   |
LL | fn cycle2() -> impl Clone {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of opaque `cycle1::{opaque#0}`, completing the cycle
note: cycle used when computing type of `cycle1::{opaque#0}`
  --> $DIR/auto-trait-leak.rs:11:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
